# screen-search

./: .gitignore  HANDOFF.md  README.md  TODO.md  install.ps1  install_startup.ps1  screen_click_gui.py  test_matcher.py
rust/screen-search-rs/: Cargo.toml
rust/screen-search-rs/src/: main.rs  matcher.rs
