[package]
name = "screen-search-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
image = { version = "0.25", default-features = false }
once_cell = "1.20"
parking_lot = "0.12"
windows = { version = "0.58", features = [
    "Foundation",
    "Foundation_Collections",
    "Graphics_Imaging",
    "Media_Ocr",
    "Storage_Streams",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_WinRT",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
